overlays: add theme resources for pixel themes
Change-Id: Ie6250ecab3acd806e41770a03dcab8698a3c4452

--- a/stub/res/values/arrays.xml
+++ b/stub/res/values/arrays.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="themes" />
+    <array name="themes">
+        <item>default</item>
+        <item>reiko</item>
+        <item>johanna</item>
+        <item>anthony</item>
+    </array>
 </resources>
